cppcheck.txt
inc/simpleini/ConvertUTF.c:116:11: style: The scope of the variable 'ch' can be reduced. [variableScope]
    UTF32 ch, ch2;
          ^
src/character.cpp:2813:7: error: Syntax Error: AST broken, 'if' doesn't have two operands. [internalAstError]
   if (portrait_c["offset_x"])
      ^
src/component.cpp:188:9: warning: Redundant assignment of '_data' to itself. [selfAssignment]
  _data = _data = std::move(other._data);
        ^
src/create.cpp:222:12: style: Variable 'selected' is assigned a value that is never used. [unreadVariable]
  selected = _method_menu->choose_previous();
           ^
src/create.cpp:224:12: style: Variable 'selected' is assigned a value that is never used. [unreadVariable]
  selected = _method_menu->choose_next();
           ^
src/create.cpp:226:12: style: Variable 'selected' is assigned a value that is never used. [unreadVariable]
  selected = _method_menu->set_mouse_selected(
           ^
src/create.cpp:363:12: style: Variable 'selected' is assigned a value that is never used. [unreadVariable]
  selected = _race_menu->choose_previous();
           ^
src/create.cpp:365:12: style: Variable 'selected' is assigned a value that is never used. [unreadVariable]
  selected = _race_menu->choose_next();
           ^
src/create.cpp:367:12: style: Variable 'selected' is assigned a value that is never used. [unreadVariable]
  selected = _race_menu->set_mouse_selected(
           ^
src/create.cpp:417:12: style: Variable 'selected' is assigned a value that is never used. [unreadVariable]
  selected = _alignment_menu->choose_previous();
           ^
src/create.cpp:419:12: style: Variable 'selected' is assigned a value that is never used. [unreadVariable]
  selected = _alignment_menu->choose_next();
           ^
src/create.cpp:421:12: style: Variable 'selected' is assigned a value that is never used. [unreadVariable]
  selected = _alignment_menu->set_mouse_selected(
           ^
src/create.cpp:469:12: style: Variable 'selected' is assigned a value that is never used. [unreadVariable]
  selected = _attribute_menu->choose_previous();
           ^
src/create.cpp:471:12: style: Variable 'selected' is assigned a value that is never used. [unreadVariable]
  selected = _attribute_menu->choose_next();
           ^
src/create.cpp:473:12: style: Variable 'selected' is assigned a value that is never used. [unreadVariable]
  selected = _attribute_menu->set_mouse_selected(
           ^
src/create.cpp:585:18: style: Variable 'class_selected' is assigned a value that is never used. [unreadVariable]
  class_selected = _class_menu->choose_previous();
                 ^
src/create.cpp:587:18: style: Variable 'class_selected' is assigned a value that is never used. [unreadVariable]
  class_selected = _class_menu->choose_next();
                 ^
src/create.cpp:589:18: style: Variable 'class_selected' is assigned a value that is never used. [unreadVariable]
  class_selected = _class_menu->set_mouse_selected(
                 ^
src/create.cpp:718:14: style: Variable 'selected' is assigned a value that is never used. [unreadVariable]
    selected = _final_menu->choose_previous();
             ^
src/create.cpp:720:14: style: Variable 'selected' is assigned a value that is never used. [unreadVariable]
    selected = _final_menu->choose_next();
             ^
src/create.cpp:722:14: style: Variable 'selected' is assigned a value that is never used. [unreadVariable]
    selected =
             ^
src/display.cpp:72:10: error: Syntax Error: AST broken, 'if' doesn't have two operands. [internalAstError]
      if (component["offset_x"])
         ^
src/frame.cpp:101:6: error: Syntax Error: AST broken, 'if' doesn't have two operands. [internalAstError]
  if (_type == WindowFrameType::NORMAL)
     ^
src/infopanel.cpp:106:15: style: Consider using std::accumulate algorithm instead of a raw loop. [useStlAlgorithm]
   max_length = each_string.length();
              ^
src/keyboard.cpp:142:3: style: Variable 'current_col' is assigned a value that is never used. [unreadVariable]
  ++current_col;
  ^
src/layout.cpp:162:10: error: Syntax Error: AST broken, 'if' doesn't have two operands. [internalAstError]
      if (components[j].isMember("x")) {
         ^
src/legate.cpp:66:6: error: Syntax Error: AST broken, 'if' doesn't have two operands. [internalAstError]
  if (text_c["offset_x"])
     ^
src/license.cpp:148:6: error: Syntax Error: AST broken, 'if' doesn't have two operands. [internalAstError]
  if (_current_line < (_textfile->size() - lines_to_display))
     ^
src/mainmenu.cpp:137:23: warning: Identical condition 'event.type==sf::Event::Closed', second condition is always false [identicalConditionAfterEarlyExit]
       if (event.type == sf::Event::Closed)
                      ^
src/mainmenu.cpp:129:22: note: If condition 'event.type==sf::Event::Closed' is true, the function will return/exit
      if (event.type == sf::Event::Closed)
                     ^
src/mainmenu.cpp:137:23: note: Testing identical condition 'event.type==sf::Event::Closed'
       if (event.type == sf::Event::Closed)
                      ^
src/menu.cpp:566:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CM_FULL;
              ^
src/menu.cpp:569:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CM_QUICK;
              ^
src/menu.cpp:572:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CM_RANDOM;
              ^
src/menu.cpp:581:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CR_DWARF;
              ^
src/menu.cpp:584:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CR_ELF;
              ^
src/menu.cpp:587:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CR_GNOME;
              ^
src/menu.cpp:590:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CR_HOBBIT;
              ^
src/menu.cpp:593:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CR_HUMAN;
              ^
src/menu.cpp:602:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CA_EVIL;
              ^
src/menu.cpp:605:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CA_GOOD;
              ^
src/menu.cpp:608:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CA_NEUTRAL;
              ^
src/menu.cpp:618:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CC_SAMURAI;
              ^
src/menu.cpp:621:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CC_FIGHTER;
              ^
src/menu.cpp:624:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CC_LORD;
              ^
src/menu.cpp:627:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CC_THIEF;
              ^
src/menu.cpp:630:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CC_NINJA;
              ^
src/menu.cpp:633:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CC_PRIEST;
              ^
src/menu.cpp:636:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CC_BISHOP;
              ^
src/menu.cpp:639:15: style: Variable 'search_for' is assigned a value that is never used. [unreadVariable]
   search_for = MenuItem::CC_MAGE;
              ^
src/spellpanel.cpp:134:15: style: Consider using std::accumulate algorithm instead of a raw loop. [useStlAlgorithm]
   max_length = each_string.length();
              ^
src/statusbar.cpp:74:6: error: Syntax Error: AST broken, 'if' doesn't have two operands. [internalAstError]
  if (_layout["offset_x"])
     ^
src/window.cpp:197:6: error: Syntax Error: AST broken, 'if' doesn't have two operands. [internalAstError]
  if ((*component)["offset_x"])
     ^
